Initial Setup and change from SqlLite to SqlServer

--- a/Todo/appsettings.Development.json
+++ b/Todo/appsettings.Development.json
@@ -1,9 +1,11 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-C6S2LCU;Initial Catalog=todo.db;User Id=admin;password=Admin@01**;Integrated Security=SSPI;Encrypt=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
