--- a/Todo/appsettings.json
+++ b/Todo/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=todo.db"
+    "DefaultConnection": "Data Source=DESKTOP-C6S2LCU;Initial Catalog=todo.db;User Id=admin;password=Admin@01**;Integrated Security=SSPI;Encrypt=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
